--- a/src/HTM/CoreBundle/Resources/views/layout.html.twig
+++ b/src/HTM/CoreBundle/Resources/views/layout.html.twig
@@ -135,6 +135,9 @@
     
             <!-- Custom -->
             <script src="../../web/js/custom.js"></script>
+            
+            <!-- Custom -->
+            <script src="../../web/js/main.js"></script>
 		
             <script type="text/javascript">
             {% if  app.request.get('_route')  == "htm_core_home" %}
