--- a/src/HTM/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/HTM/CoreBundle/Resources/views/Core/index.html.twig
@@ -9,7 +9,7 @@
 <h2 id='target' class="page-heading heading--outcontainer">Now in the cinema</h2>
 <div class="col-sm-12">
 	<div class="row">
-		<div class="col-sm-8 col-md-9">
+		<div id="now-in-cinema" class="col-sm-8 col-md-9">
 			{{ render(controller("HTMCinemaBundle:Cinema:nowincinema")) }}
 			<div class="row"></div>
 		</div>
