--- a/src/HTM/CoreBundle/Resources/views/layout.html.twig
+++ b/src/HTM/CoreBundle/Resources/views/layout.html.twig
@@ -20,29 +20,29 @@
         
         
         {% block stylesheets %}
-        <link href="../../web/css/external/jquery-ui.css" rel="stylesheet">
+        <link href="{{ asset('css/external/jquery-ui.css') }}" rel="stylesheet">
         
         <!-- Mobile menu -->
-        <link href="../../web/css/gozha-nav.css" rel="stylesheet" />
+        <link href="{{ asset('css/gozha-nav.css') }}" rel="stylesheet" />
         <!-- Select -->
-        <link href="../../web/css/external/jquery.selectbox.css" rel="stylesheet" />
+        <link href="{{ asset('css/external/jquery.selectbox.css') }}" rel="stylesheet" />
         
         <!-- Swiper slider -->
-        <link href="../../web/css/external/idangerous.swiper.css" rel="stylesheet" />
+        <link href="{{ asset('css/external/idangerous.swiper.css') }}" rel="stylesheet" />
         <!-- Magnific-popup -->
-        <link href="../../web/css/external/magnific-popup.css" rel="stylesheet" />
+        <link href="{{ asset('css/external/magnific-popup.css') }}" rel="stylesheet" />
 
         <!-- Slider Revolution CSS Files -->
-        <link rel="stylesheet" type="text/css" href="../../web/revolution/css/settings.css">
-        <link rel="stylesheet" type="text/css" href="../../web/revolution/css/layers.css">
-        <link rel="stylesheet" type="text/css" href="../../web/revolution/css/navigation.css">
+        <link rel="stylesheet" type="text/css" href="{{ asset('revolution/css/settings.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('revolution/css/layers.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ asset('revolution/css/navigation.css') }}">
     
         <!-- Custom -->
-        <link href="../../web/css/style.css?v=1" rel="stylesheet" />
+        <link href="{{ asset('css/style.css?v=1') }}" rel="stylesheet" />
         {% endblock %}
         
         <!-- Modernizr --> 
-        <script src="../../web/js/external/modernizr.custom.js"></script>
+        <script src="{{ asset('js/external/modernizr.custom.js') }}"></script>
         
         
      </head>
@@ -54,7 +54,7 @@
         		<div class="container">
         			<!-- Logo link-->
                     <a href='{{ path('htm_core_home') }}' class="logo">
-                        <img alt='logo' src="../../web/images/logo.png">
+                        <img alt='logo' src="{{ asset('images/logo.png') }}">
                     </a>
                     <!-- Generating Menu content -->
                     {{ render(controller("HTMCoreBundle:Core:menu")) }}
@@ -90,54 +90,54 @@
      	
         {% block javascripts %}
           	<!-- jQuery 3.1.1--> 
-            <script type="text/javascript" src="../../web/js/external/jquery-3.1.1.min.js"></script>
+            <script type="text/javascript" src="{{ asset('js/external/jquery-3.1.1.min.js') }}"></script>
             <!-- Migrate --> 
-            <script src="../../web/js/external/jquery-migrate-1.2.1.min.js"></script>
+            <script src="{{ asset('js/external/jquery-migrate-1.2.1.min.js') }}"></script>
             <!-- jQuery UI -->
-        	<script src="../../web/js/external/jquery-ui.js"></script>
+        	<script src="{{ asset('js/external/jquery-ui.js') }}"></script>
             <!-- Bootstrap 3--> 
             <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     
             <!-- Slider Revolution core JavaScript files -->
-            <script type="text/javascript" src="../../web/revolution/js/jquery.themepunch.tools.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/jquery.themepunch.revolution.min.js"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/jquery.themepunch.tools.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/jquery.themepunch.revolution.min.js') }}"></script>
     
             <!-- Slider Revolution extension scripts. --> 
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.actions.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.migration.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
-            <script type="text/javascript" src="../../web/revolution/js/extensions/revolution.extension.video.min.js"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.actions.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.carousel.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.kenburn.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.layeranimation.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.migration.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.navigation.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.parallax.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.slideanims.min.js') }}"></script>
+            <script type="text/javascript" src="{{ asset('revolution/js/extensions/revolution.extension.video.min.js') }}"></script>
     
             <!-- Mobile menu -->
-            <script src="../../web/js/jquery.mobile.menu.js"></script>
+            <script src="{{ asset('js/jquery.mobile.menu.js') }}"></script>
              <!-- Select -->
-            <script src="../../web/js/external/jquery.selectbox-0.2.min.js"></script>
+            <script src="{{ asset('js/external/jquery.selectbox-0.2.min.js') }}"></script>
             <!-- Stars rate -->
-            <script src="../../web/js/external/jquery.raty.js"></script>
+            <script src="{{ asset('js/external/jquery.raty.js') }}"></script>
             <!-- Swiper slider -->
-        	<script src="../../web/js/external/idangerous.swiper.min.js"></script>
+        	<script src="{{ asset('js/external/idangerous.swiper.min.js') }}"></script>
         	<!-- Magnific-popup -->
-        	<script src="../../web/js/external/jquery.magnific-popup.min.js"></script> 
+        	<script src="{{ asset('js/external/jquery.magnific-popup.min.js') }}"></script> 
         	
             
             <!-- Form element -->
-            <script src="../../web/js/external/form-element.js"></script>
+            <script src="{{ asset('js/external/form-element.js') }}"></script>
             <!-- Form validation -->
-            <script src="../../web/js/form.js"></script>
+            <script src="{{ asset('js/form.js') }}"></script>
     
             <!-- Twitter feed -->
-            <!-- >script src="../../web/js/external/twitterfeed.js"></script -->
+            <!-- >script src="{{ asset('js/external/twitterfeed.js') }}"></script -->
     
             <!-- Custom -->
-            <script src="../../web/js/custom.js"></script>
+            <script src="{{ asset('js/custom.js') }}"></script>
             
             <!-- Custom -->
-            <script src="../../web/js/main.js"></script>
+            <script src="{{ asset('js/main.js') }}"></script>
 		
             <script type="text/javascript">
             {% if  app.request.get('_route')  == "htm_core_home" %}
@@ -152,7 +152,7 @@
             {% endif %}
             {% if  app.request.get('_route')  == "htm_movie_singlepage" %}
               $(document).ready(function() {
-                  init_MoviePage();
+                  init_MoviePage("{{ asset('images/') }}");
               });
             {% endif %}
             </script>
