--- a/src/HTM/CinemaBundle/Resources/views/Cinema/film.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/film.html.twig
@@ -52,9 +52,9 @@
     
                 <div class="preview-footer">
                     <div class="movie__rate">
-                    <div class="score score_{{ film.id }}"></div>
-                    <span class="movie__rate-number">170 votes</span> 
-                    <span class="movie__rating rate_{{ film.id }}" data-rate="{{ film.stars|number_format(1, '.', '') }}">{{ film.stars|number_format(1, '.', '') }}</span>
+                        <div class="score score_{{ film.id }}" data-id="{{ film.id }}"></div>
+                        <span class="movie__rate-number">170 votes</span> 
+                        <span class="movie__rating rate_{{ film.id }}" data-rate="{{ film.stars|number_format(1, '.', '') }}">{{ film.stars|number_format(1, '.', '') }}</span>
                     </div>
                 </div>
             </div>
