--- a/web/css/style.css
+++ b/web/css/style.css
@@ -3536,7 +3536,6 @@ ul#navigation a:hover {
 }
 .btn--sign:before {
   content: '';
-  background-image: url(../images/components/wave.svg);
   background-repeat: no-repeat;
   background-size: 48px 4px;
   width: 48px;
@@ -3551,7 +3550,7 @@ ul#navigation a:hover {
 }
 .btn--sign:hover:before,
 .btn--sign:focus:before {
-  background-image: url(../images/components/wave-hover.svg);
+
 }
 .btn--book {
   padding: 7px 17px;
@@ -5153,7 +5152,6 @@ ul#navigation li.mega-menu__nav-item:hover:before {
 }
 .auth .btn--singin:before {
   left: 9px;
-  background-image: url(../images/components/wave-hover.svg);
 }
 .auth .btn--singin:after {
   content: "\f078";
@@ -7484,7 +7482,6 @@ ul#navigation li.mega-menu__nav-item:hover:before {
 }
 .tparrows.tp-leftarrow.hebe .slider__info:after {
   content: '';
-  background-image: url("../images/components/wave.svg");
   background-repeat: no-repeat;
   background-size: 48px 4px;
   width: 48px;
@@ -7570,7 +7567,6 @@ ul#navigation li.mega-menu__nav-item:hover:before {
 }
 .tparrows.tp-rightarrow.hebe .slider__info:after {
   content: '';
-  background-image: url("../images/components/wave.svg");
   background-repeat: no-repeat;
   background-size: 48px 4px;
   width: 48px;
@@ -8283,6 +8279,13 @@ ul#navigation li.mega-menu__nav-item:hover:before {
   font-weight: normal;
   font-family: 'aleoitalic', sans-serif;
   text-transform: none;
+}
+.login .login__title .login-error {
+  font-size: 16px;
+  font-weight: normal;
+  font-family: 'aleoitalic', sans-serif;
+  text-transform: none;
+  color: red;
 }
 .login .login__tracker {
   text-align: center;
