--- a/src/HTM/CinemaBundle/Resources/views/Cinema/slider.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/slider.html.twig
@@ -6,7 +6,7 @@
             <li data-transition="fade" class="slide" data-title='Rush.'>
 
                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-                <img class="rev-slidebg" alt='' src="../../web/images/slides/vikram_vedha.jpg">
+                <img class="rev-slidebg" alt='' src="/images/slides/vikram_vedha.jpg">
 
                 <div class="tp-caption slide__name margin-slider" 
                      data-x="right" 
@@ -156,7 +156,7 @@
             <li data-transition="fade" class="slide" data-title='Stop wishing. Start doing.'>
 
                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-                <img class="rev-slidebg" alt='' src="../../web/images/slides/thanioruvan.jpg">
+                <img class="rev-slidebg" alt='' src="/images/slides/thanioruvan.jpg">
                 <div class="tp-caption slide__name slide__name--smaller slide__name--specific" 
                   data-x="center" 
                   data-y="160" 
@@ -225,7 +225,7 @@
             <li data-transition="fade" class="slide" data-title='Rush.'>
 
                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
-                <img class="rev-slidebg" alt='' src="../../web/images/slides/kathi.jpg">
+                <img class="rev-slidebg" alt='' src="/images/slides/kathi.jpg">
 
                 <div class="tp-caption slide__name margin-slider" 
                      data-x="right" 
