--- a/src/HTM/CoreBundle/Resources/views/Core/slide.html.twig
+++ b/src/HTM/CoreBundle/Resources/views/Core/slide.html.twig
@@ -3,7 +3,7 @@
 	<div id="rev_slider_1" class="banner rev_slider" style="display:none">
 		<ul>
 			<!-- SLIDE 1 -->
-            <li data-transition="fade" class="slide" data-title='Rush.'>
+            <li data-transition="fade" class="slide rrrr" data-title='Rush.'>
 
                 <!-- SLIDE'S MAIN BACKGROUND IMAGE -->
                 <img class="rev-slidebg" alt='' src="../../web/images/slides/vikram_vedha.jpg">
