--- a/src/HTM/CinemaBundle/Resources/views/Cinema/single.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/single.html.twig
@@ -56,7 +56,7 @@
 		{{ render(controller("HTMCinemaBundle:Cinema:photosvideos")) }}
 		
 		<!-- COMMENTS -->
-        {{ render(controller("HTMCinemaBundle:Cinema:comments", {'id': film[0].id})) }}
+        {{ render(controller("HTMCinemaBundle:Cinema:comments")) }}
 		
 	</div>
 </div>
