--- a/src/HTM/CoreBundle/Resources/views/Core/contact.html.twig
+++ b/src/HTM/CoreBundle/Resources/views/Core/contact.html.twig
@@ -18,12 +18,7 @@
 <div class="contact-form-wrapper">
     <div class="container">
         <div class="col-sm-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-        	{% for flashMessage in app.session.flashbag.get('notice') %}
-        	    <div class="info-message-envoye">
-        	        {{ flashMessage }}
-        	    </div>
-        	{% endfor %}
-            {{ form_start(form, {'attr': {'class': 'form row', 'id':'contact-form', 'novalidate':''} }) }}
+            {{ form_start(form, {'attr': {'class': 'form row', 'id':'contact-form'} }) }}
             	{# Les erreurs générales du formulaire. #}
                 {{ form_errors(form) }}
                 <p class="form__title">Drop us a line</p>
@@ -36,11 +31,20 @@
                 <div class="col-sm-12">
                     {{ form_widget(form.message, {'attr': {'class': 'form__message', 'name':'user-message', 'placeholder':'Your message'}}) }}
                 </div>
-                <button id="btn-contact" type="submit" class='btn btn-md btn--danger'>send message</button>
+                {{ form_widget(form.send, {'attr': {'class': 'btn btn-md btn--danger', 'onClick':'verifyContactForm()'}}) }}
                 {{ form_rest(form) }}
             {{ form_end(form) }}
         </div>
     </div>
 </div>
 <div class="clearfix"></div>
+    {# Afin d'afficher un message si le message est bien envoyé#}
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <script>
+            var self = $('#contact-form');
+            self.children().fadeOut(300,function(){ $(this).hide() })
+            $('<p class="success"><span class="success-huge">Thank you!</span> <br> {{ flashMessage }}</p>').appendTo(self)
+                .hide().delay(300).fadeIn();
+        </script>
+    {% endfor %}
 {% endblock %}
