--- a/src/HTM/CinemaBundle/Resources/views/Cinema/news.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/news.html.twig
@@ -4,7 +4,7 @@
     <div class="col-sm-4 similar-wrap col--remove">
         <div class="post post--preview post--preview--wide">
             <div class="post__image">
-                <img alt='' src="../../web/images/client-photo/post-thor.jpg">
+                <img alt='' src="/images/client-photo/post-thor.jpg">
                 <div class="social social--position social--hide">
                     <span class="social__name">Share:</span>
                     <a href='#' class="social__variant social--first fa fa-facebook"></a>
@@ -20,7 +20,7 @@
     <div class="col-sm-4 similar-wrap col--remove">
         <div class="post post--preview post--preview--wide">
             <div class="post__image">
-                <img alt='' src="../../web/images/client-photo/post-annual.jpg">
+                <img alt='' src="/images/client-photo/post-annual.jpg">
                 <div class="social social--position social--hide">
                     <span class="social__name">Share:</span>
                     <a href='#' class="social__variant social--first fa fa-facebook"></a>
@@ -36,7 +36,7 @@
     <div class="col-sm-4 similar-wrap col--remove">
         <div class="post post--preview post--preview--wide">
             <div class="post__image">
-                <img alt='' src="../../web/images/client-photo/post-awards.jpg">
+                <img alt='' src="/images/client-photo/post-awards.jpg">
                 <div class="social social--position social--hide">
                     <span class="social__name">Share:</span>
                     <a href='#' class="social__variant social--first fa fa-facebook"></a>
