--- a/src/HTM/CinemaBundle/Resources/views/Cinema/raty.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/raty.html.twig
@@ -3,3 +3,6 @@
 {% else %}
 	<div id="your-vote" class="score" data-yourrate="{{ 0 }}" data-id="{{ filmId }}"></div>
 {% endif %}
+
+{#
+<div class="score score_{{ film.id }}" data-id="{{ film.id }}"></div>#}
