--- a/src/HTM/CinemaBundle/Resources/views/Cinema/single.html.twig
+++ b/src/HTM/CinemaBundle/Resources/views/Cinema/single.html.twig
@@ -15,7 +15,7 @@
                     <span class="movie__rating">{{ film[0].stars }}</span>
                     <img alt='' src="{{ asset('images/cinema/') }}{{ film[0].imagesingleview }}">
                 </div>
-                <div class="movie__rate">Your vote: {{ render(controller("HTMCinemaBundle:Cinema:raty", {'iIdFilm': film[0].id})) }}</div>
+                <div class="movie__rate">Your vote: {{ render(controller("HTMCinemaBundle:Cinema:raty", {'iIdFilm': film[0].id, 'iIdOtherUser': null, 'bUserConnected': 1})) }}</div>
             </div>
 
             <div class="col-sm-6 col-md-8">
@@ -78,12 +78,22 @@
 </div>
 </aside>
 
-    {# JS : Pour ajouer le nombre de commentaire dans le titre principale#}
+
     <script>
+        {# JS : Pour ajouer le nombre de commentaire dans le titre principale#}
         var numberOfComments = $('#number-of-comments').val();
         if( parseInt(numberOfComments) > 0){
             $('#number-comments').text("(" + numberOfComments + ")");
         }
+
+        $(document).ready(function() {
+            // Rating by stars
+            // For single movie page
+            $('div.score').each(function (i, d) {
+                var yourrate = $('#' + d.id).data('yourrate');
+                getIdToGenerateStars(yourrate, d.id, this);
+            });
+        });
     </script>
 
 {% endblock %}
